Codigo da versao 4.3.1

--- a/DescicloApp/chrome/DescicloApp/paginas/changelog.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/changelog.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Changelog - DescicloApp para Firefox</title>
-<link rel="shortcut icon" href="../icons/icon.png" /> 
+<link rel="shortcut icon" href="../icons/icon.ico" /> 
 <link rel="author" href="https://plus.google.com/101361157875821775334/" />
 <link rel="stylesheet" href="../css/paginas.css" />
 <link rel="stylesheet" href="../css/button.css" />
@@ -62,7 +62,7 @@ Modifica&ccedil;&otilde;es feitas nas &uacute;ltimas vers&otilde;es:
 <br><br>
 Lan&ccedil;ada dia 15 de novembro de 2012:<br>
 Melhoras:<br>
-<a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.3/" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
+<a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.3.1/" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
 <br><br>
 <font color="#9400d3">&bull;</font>Melhoras nas interface.<br>
 <font color="#9400d3">&bull;</font>E outras melhoras n&atilde;o muito significantes.
@@ -82,7 +82,7 @@ Uma atualiza&ccedil;&atilde;o:<br>
 <a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.0.6/" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
 <br><br>
 <font color="#9400d3">&bull;</font>Melhoras na interface.<br>
-<font color="#9400d3">&bull;</font>Colocada fun&ccedil;&atilde;o de busca pela barra de buscas do Firefox, veja como adicionar <a href="busca.html" target="_blank">aqui</a>.<br>
+<font color="#9400d3">&bull;</font>Colocada fun&ccedil;&atilde;o de busca pela barra de buscas do Firefox, veja como adicionar <a href="http://aloogle.tumblr.com/buscadescicloff" target="_blank">aqui</a>.<br>
 <font color="#9400d3">&bull;</font>Colocado um bot&atilde;o de mais, que ao clicar aparece outros namespaces na popup:<br>
 &nbsp;&nbsp;<font color="#00ff00">&bull;</font>Digitando algo na barra de busca e depois clicando em qualquer um dos namespaces te levar&aacute; a p&aacute;gina de cria&ccedil;&atilde;o ou edi&ccedil;&atilde;o dele, por exemplo, digitar "DescicloApp" na barra de busca, clicar em "Mais" e depois clicar no bot&atilde;o do Descion&aacute;rio te levar&aacute; a p&aacute;gina de cria&ccedil;&atilde;o do verbete DescicloApp no Descion&aacute;rio, mesma coisa com Desnot&iacute;cias e etc :D<br>
 <font color="#9400d3">&bull;</font>Corre&ccedil;&atilde;o de bugs:<br>
