--- a/DescicloApp/chrome/DescicloApp/paginas/faq.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/faq.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>FAQ - DescicloApp para Firefox</title>
-<link rel="shortcut icon" href="../icons/icon.png" /> 
+<link rel="shortcut icon" href="../icons/icon.ico" /> 
 <link rel="author" href="https://plus.google.com/101361157875821775334/" />
 <link rel="stylesheet" href="../css/paginas.css" />
 <script src="../js/jquery/jquery.min.js"></script>
