--- a/DescicloApp/chrome/DescicloApp/paginas/opera.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/opera.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Download - DescicloApp para Opera</title>
-<link rel="shortcut icon" href="../icons/icon.png" /> 
+<link rel="shortcut icon" href="../icons/icon.ico" /> 
 <link rel="author" href="https://plus.google.com/101361157875821775334/" />
 <link rel="stylesheet" href="../css/paginas.css" />
 <link rel="stylesheet" href="../css/button.css" />
