--- a/DescicloApp/chrome/DescicloApp/paginas/sobre.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/sobre.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Sobre - DescicloApp para Firefox</title>
-<link rel="shortcut icon" href="../icons/icon.png"> 
+<link rel="shortcut icon" href="../icons/icon.ico"> 
 <link rel="author" href="https://plus.google.com/101361157875821775334/">
 <link rel="stylesheet" href="../css/paginas.css">
 <link rel="stylesheet" href="../css/button.css">
@@ -77,7 +77,7 @@ div.share:active {
 <h1>Sobre <a id="opera" title="Tamb&eacute;m usa Opera? Fa&ccedil;a download do DescicloApp para Opera!! Clique aqui"><img src="../imagens/opera.png" height="30px" align="right"></a><a id="chrome" title="Tamb&eacute;m usa Chrome? Fa&ccedil;a download do DescicloApp para Google Chrome!! Clique aqui"><img src="../imagens/chrome.png" height="30px" align="right"></a></h1>
 <div>
 <h3>Vers&atilde;o</h3>
-<div>4.3</div>
+<div>4.3.1</div>
 <hr>
 <h3>Desenvolvido por</h3>
 <div>
