--- a/DescicloApp/chrome/DescicloApp/popup.html
+++ b/DescicloApp/chrome/DescicloApp/popup.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>DescicloApp</title>
-<link rel="shortcut icon" href="icons/icon.png" />
+<link rel="shortcut icon" href="icons/icon.ico" />
 <link rel="author" href="https://plus.google.com/101361157875821775334/" />
 <link rel="stylesheet" href="css/select.css" />
 <link rel="stylesheet" href="css/button.css" />
@@ -129,7 +129,7 @@ div.sombra:active {
 </select></div><input type="text" class="text" id="q" style="float:left; width: 175px; border-radius: 0px;" autocomplete="on" placeholder="Escreva algo..." name="q" /><div class="tooltip"><span>Ir a esta p&aacute;gina</span><input type="submit" id="ir" class="azul" style="width:25px; height:22px; border: #000000 solid 1px; background-image:url(imagens/avancarwp7.png); background-repeat: no-repeat; background-position: center; background-size: 25px; float:left; border-radius:0px;" value="" /></div><div class="tooltip"><span>Editar ou criar essa p&aacute;gina</span><input type="submit" id="editar" class="azul" style="width:25px; height:22px; border: #000000 solid 1px; background-image:url(imagens/novowp7.png); background-repeat: no-repeat; background-position: center; background-size: 25px; float:left; border-radius: 0px;" value="" /></div><div class="tooltip"><span>Pesquisar</span><input type="submit" id="pesquisar" class="azul" style="width:25px; height:22px; border: #000000 solid 1px; float:left; border-bottom-right-radius: 10px; border-top-right-radius: 10px; background-image:url(imagens/buscawp7.png); background-repeat: no-repeat; background-position: center; background-size: 20px; border-top-left-radius: 0px; border-bottom-left-radius: 0px;" value="" /></div></tr></table>
 <br><br>
 	<div id="irb" class="menuitem">
-		<img src="icons/icon.png"> Ir a Desciclop&eacute;dia
+		<img src="icons/icon.ico"> Ir a Desciclop&eacute;dia
 	</div>
 <hr>
 	<div id="pagina" class="menuitem">
@@ -168,7 +168,7 @@ div.sombra:active {
 <div id="alerta-editar" title="DescicloApp"><p>Escreva algo primeiro:</p><p>Digite na barra de texto que p&aacute;gina voc&ecirc; quer editar ou criar na Desciclop&eacute;dia, s&oacute; n&atilde;o vai fazer merda pra um sysop n&atilde;o te pegar, seu n00b!!</p>
 </div>
 <div id="alerta-pesquisar" title="DescicloApp"><p>Escreva algo primeiro:</p><p>Escreva algo primeiro: Digite na barra de texto o que voc&ecirc; quer pesquisar na <s>wiki</s> Desciclop&eacute;dia, ou n&atilde;o</p>
-<p><font style="text-decoration: underline; font-weight:bold;">Dica:</font> Voc&ecirc; pode adicionar a busca do DescicloApp direto na barra de buscas do Firefox <a onclick="window.open('paginas/busca.html'); window.close()" class="script">clicando aqui</a></p>
+<p><font style="text-decoration: underline; font-weight:bold;">Dica:</font> Voc&ecirc; pode adicionar a busca do DescicloApp direto na barra de buscas do Firefox <a onclick="window.open('http://aloogle.tumblr.com/buscadescicloff'); window.close()" class="script">clicando aqui</a></p>
 </div>
 </div>
 </body>
