--- a/DescicloApp/chrome/DescicloApp/msg.html
+++ b/DescicloApp/chrome/DescicloApp/msg.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Enviar uma mensagem - DescicloApp</title>
-<link rel="shortcut icon" href="icons/icon.png" />
+<link rel="shortcut icon" href="icons/icon.ico" />
 <link rel="author" href="https://plus.google.com/101361157875821775334/" />
 <link rel="stylesheet" href="popup.html" />
 <link rel="stylesheet" href="css/select.css" />
