Codigo da versao 4.5

--- a/DescicloApp/chrome/DescicloApp/paginas/changelog.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/changelog.html
@@ -41,7 +41,7 @@ a:visited {
 </head>
 <body>
 <div id="navbar-container" style="background: url('../imagens/batata.png') no-repeat bottom #f1f1f1;">
-<div id="navbar-content-title"><img src="../icons/icon_48.png"><br>DescicloApp</div>
+<div id="navbar-content-title"><div id="descicloapp"><img src="../icons/icon_48.png"><br>DescicloApp</div></div>
 <ul id="navbar">
 <li id="faq" class="navbar-item">FAQ</li>
 <li id="changelog" class="navbar-item navbar-item-selected">Changelog</li>
@@ -52,11 +52,23 @@ a:visited {
 <div id="mainview-content">
 <div id="page-container">
 <div class="page" style="display:block">
-<h1>Changelog <button id="descicloapp" style="height: 30px; width: 30px; background:url(../imagens/externowp7.png) no-repeat center; border-radius: 30px; float:right;" title="Ver mais informa&ccedil;&otilde;es sobre a extens&atilde;o" /></h1>
+<h1>Changelog <button id="info" style="height: 30px; width: 30px; background:url(../imagens/externowp7.png) no-repeat center; border-radius: 30px; float:right;" title="Ver mais informa&ccedil;&otilde;es sobre a extens&atilde;o" /></h1>
 <br>
 Modifica&ccedil;&otilde;es feitas nas &uacute;ltimas vers&otilde;es:
 <br><br>
-<b>NOTA:</b> <i>A extens&atilde;o funciona melhor no Firefox 16+.</i>
+<b><font color="#ff0000">NOTA:</font></b> <i>A extens&atilde;o funciona melhor no Firefox 16+.</i>
+<br><br>
+<u><b>Vers&atilde;o 4.5</b></u>
+<br><br>
+Lan&ccedil;ada dia 05 de fevereiro de 2013:<br>
+Vers&atilde;o de um ano <a href="#" title="Muito obrigado &agrave; aqueles que usaram a extens&atilde;o nesse 1 ano de desenvolvimento, principalmente aqueles que nunca desinstalaram ela"><font color="#000000">:D</font></a><br>
+<a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.5/" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
+<br><br>
+<font color="#9400d3">&bull;</font>Novos bot&otilde;es de Boteco, Mesa de Truco e A.A.<br>
+<font color="#9400d3">&bull;</font>Tirado o bot&atilde;o da antiga Desinopses.<br>
+<font color="#9400d3">&bull;</font>Agora os bot&otilde;es mais novos levaram diretamente para o artigo, n&atilde;o para a p&aacute;gina de edi&ccedil;&atilde;o. (exceto para Desnot&iacute;cias,Despoesias, Descifras, Deslistas, novo f&oacute;rum no A.A. e Mesa de Truco, pois custamam ter t&iacute;tulos grandes)<br>
+<font color="#ff0000">&bull;</font>Corre&ccedil;&atilde;o de alguns bugs.<br>
+<b>NOTA:</b> Agora as atualiza&ccedil;&otilde;es ser&atilde;o mais demoradas e simples, pois o desenvolvedor n&atilde;o tem mais computador.
 <br><br>
 <u><b>Vers&atilde;o 4.3</b></u>
 <br><br>
