--- a/DescicloApp/chrome/DescicloApp/paginas/sobre.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/sobre.html
@@ -63,7 +63,7 @@ div.share:active {
 </head>
 <body>
 <div id="navbar-container" style="background: url('../imagens/batata.png') no-repeat bottom #f1f1f1;">
-<div id="navbar-content-title"><img src="../icons/icon_48.png"><br>DescicloApp</div>
+<div id="navbar-content-title"><div id="descicloapp"><img src="../icons/icon_48.png"><br>DescicloApp</div></div>
 <ul id="navbar">
 <li id="faq" class="navbar-item">FAQ</li>
 <li id="changelog" class="navbar-item">Changelog</li>
@@ -77,13 +77,13 @@ div.share:active {
 <h1>Sobre <a id="opera" title="Tamb&eacute;m usa Opera? Fa&ccedil;a download do DescicloApp para Opera!! Clique aqui"><img src="../imagens/opera.png" height="30px" align="right"></a><a id="chrome" title="Tamb&eacute;m usa Chrome? Fa&ccedil;a download do DescicloApp para Google Chrome!! Clique aqui"><img src="../imagens/chrome.png" height="30px" align="right"></a></h1>
 <div>
 <h3>Vers&atilde;o</h3>
-<div>4.3.1</div>
+<div>4.5</div>
 <hr>
 <h3>Desenvolvido por</h3>
 <div>
 Alefe Souza<br>
 <a href="http://twitter.com/alefesouza5" target="_blank" title="Twitter">@alefesouza5</a><br>
-<a href="http://aloogle.tumblr.com/" target="_blank" title="Tumblr">http://aloogle.tumblr.com</a><br>
+<a href="http://engra.tumblr.com/" target="_blank" title="Tumblr">http://engra.tumblr.com</a><br>
 <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" title="P&aacute;gina na Desciclop&eacute;dia">http://desciclopedia.org/wiki/Usu&aacute;rio:&Aacute;s</a>
 </div>
 <hr>
@@ -117,6 +117,5 @@ E se voc&ecirc; gostou muito da extens&atilde;o, compartilhe com seus amigos que
 <br><br><br>
 <div class="share" align="center"><div class="tooltip7"><span>&nbsp;&nbsp;&nbsp;<button class="toolti" id="sharefacebook"><div style="float:left;"><img src="../imagens/facebook.png" width="45px"><br><font style="color: #ffffff; text-decoration: none;">Facebook</font></div></button>&nbsp;&nbsp;&nbsp;<button class="toolti" id="sharetwitter"><div style="float:right"><img src="../imagens/twitter.png" width="45px"><br><font style="color: #ffffff; text-decoration: none;">Twitter</font></div></button><br><br><button class="toolti" id="sharegoogleplus"><div><img src="../imagens/googleplus.png" width="50px"><br><font style="color: #ffffff; text-decoration: none;">Google+</font></div></button></span><b><a>Compartilhar</a></b>&nbsp;<img src="../imagens/metrosharebyaloogle.png" width="15px"></div></div>
 <br>
-<div id="descicloapp" style="display:none" />
 </body>
 </html>
