--- a/DescicloApp/chrome/DescicloApp/paginas/faq.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/faq.html
@@ -40,7 +40,7 @@ a:visited {
 </head>
 <body>
 <div id="navbar-container" style="background: url('../imagens/batata.png') no-repeat bottom #f1f1f1;">
-<div id="navbar-content-title"><img src="../icons/icon_48.png"><br>DescicloApp</div>
+<div id="navbar-content-title"><div id="descicloapp"><img src="../icons/icon_48.png"><br>DescicloApp</div></div>
 <ul id="navbar">
 <li id="faq" class="navbar-item navbar-item-selected">FAQ</li>
 <li id="changelog" class="navbar-item">Changelog</li>
@@ -75,7 +75,7 @@ Porque o jeito de fazer uma p&aacute;gina de op&ccedil;&otilde;es no Firefox &ea
 <div id="rodape">
 <div style="float:left">&nbsp;&copy; 2010-2012 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right"><a href="http://desciclopedia.org/wiki/All_your_base_are_belong_to_us" target="_blank"><font color="#000000">All your extension are belong to</font> <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" target="_blank">me</a>.</div>
 <div style="display:none">
-<div id="descicloapp"/><div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
+<div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
 </div>
 </body>
 </html>
