Codigo da versao 4.5.1

--- a/DescicloApp/chrome/DescicloApp/paginas/faq.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/faq.html
@@ -4,7 +4,7 @@
 <link rel="shortcut icon" href="../icons/icon.ico" /> 
 <link rel="author" href="https://plus.google.com/101361157875821775334/" />
 <link rel="stylesheet" href="../css/paginas.css" />
-<script src="../js/jquery/jquery.min.js"></script>
+<script src="../js/jquery/jquery-1.9.1.min.js"></script>
 <script src="../js/paginas.js"></script>
 <style type="text/css">
 body {
