--- a/DescicloApp/chrome/DescicloApp/popup.html
+++ b/DescicloApp/chrome/DescicloApp/popup.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/button.css" />
 <link rel="stylesheet" href="css/inputtext.css" />
 <link rel="stylesheet" href="css/tooltip.css" />
-<script src="js/jquery/jquery.min.js"></script>
+<script src="js/jquery/jquery-1.9.1.min.js"></script>
 <script src="js/jquery/jquery.ui.core.js"></script>
 <script src="js/jquery/jquery.ui.widget.js"></script>
 <script src="js/jquery/jquery.ui.button.js"></script>
