--- a/DescicloApp/chrome/DescicloApp/paginas/opera.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/opera.html
@@ -5,7 +5,7 @@
 <link rel="author" href="https://plus.google.com/101361157875821775334/" />
 <link rel="stylesheet" href="../css/paginas.css" />
 <link rel="stylesheet" href="../css/button.css" />
-<script src="../js/jquery/jquery.min.js"></script>
+<script src="../js/jquery/jquery-1.9.1.min.js"></script>
 <script src="../js/paginas.js"></script>
 <style type="text/css">
 body {
