--- a/DescicloApp/chrome/DescicloApp/paginas/sobre.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/sobre.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="../css/paginas.css">
 <link rel="stylesheet" href="../css/button.css">
 <link rel="stylesheet" href="../css/tooltip.css">
-<script src="../js/jquery/jquery.min.js"></script>
+<script src="../js/jquery/jquery-1.9.1.min.js"></script>
 <script src="../js/paginas.js"></script>
 <style type="text/css">
 body {
