Codigo da versao 4.7

--- a/DescicloApp/chrome/DescicloApp/paginas/changelog.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/changelog.html
@@ -56,7 +56,14 @@ a:visited {
 <br>
 Modifica&ccedil;&otilde;es feitas nas &uacute;ltimas vers&otilde;es:
 <br><br>
-<b><font color="#ff0000">NOTA:</font></b> <i>A extens&atilde;o funciona melhor no Firefox 16+.</i>
+<u><b>Vers&atilde;o 4.7</b></u>
+<br><br>
+Lan&ccedil;ada dia 01 de mar&ccedil;o 2013:<br>
+Pequena atualiza&ccedil;&atilde;o:<br>
+<a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/4.7" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
+<br><br>
+<font color="#9400d3">&bull;</font>Agora escrevendo um nome de usu&aacute;rio e clicando em algum "Minha" te levar&aacute; ao desse usu&aacute;rio.<br>
+<font color="#9400d3">&bull;</font>Escrevendo algum n&uacute;mero e clicando no bot&atilde;o de Mudan&ccedil;as recentes abrir&aacute; o tanto de mudan&ccedil;as que voc&ecirc; digitou.
 <br><br>
 <u><b>Vers&atilde;o 4.5</b></u>
 <br><br>
@@ -112,7 +119,7 @@ Primeira vers&atilde;o para Firefox:<br>
 <br>
 </div>
 <div id="rodape">
-<div style="float:left">&nbsp;&copy; 2010-2012 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right"><a href="http://desciclopedia.org/wiki/All_your_base_are_belong_to_us" target="_blank"><font color="#000000">All your extension are belong to</font> <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" target="_blank">me</a>.</div>
+<div style="float:left">&nbsp;&copy; 2010-2013 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right"><a href="http://desciclopedia.org/wiki/All_your_base_are_belong_to_us" target="_blank"><font color="#000000">All your extension are belong to</font> <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" target="_blank">me</a>.</div>
 </div>
 <div style="display:none"><div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
 </body>
