Codigo da versao 5.0

--- a/DescicloApp/chrome/DescicloApp/paginas/changelog.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/changelog.html
@@ -45,6 +45,7 @@ a:visited {
 <ul id="navbar">
 <li id="faq" class="navbar-item">FAQ</li>
 <li id="changelog" class="navbar-item navbar-item-selected">Changelog</li>
+<li id="opcoes" class="navbar-item">Op&ccedil;&otilde;es</li>
 <li id="sobre" class="navbar-item">Sobre</li>
 </ul>
 </div>
@@ -56,7 +57,27 @@ a:visited {
 <br>
 Modifica&ccedil;&otilde;es feitas nas &uacute;ltimas vers&otilde;es:
 <br><br>
+<u><b>Vers&atilde;o 5.0</b></u>
+<br><br>
+Lan&ccedil;ada dia 25 de maio 2013:<br>
+Super atualiza&ccedil;&atilde;o:<br>
+<a href="https://addons.mozilla.org/pt-BR/firefox/addon/descicloapp/versions/5.0" target="_blank"><b>Link para download</b>&nbsp;<img src="../imagens/externowp7mouse.png" width="15px"></a>
+<br><br>
+<font color="#9400d3">&bull;</font>Colocado a DescicloToolbar.<br>
+<font color="#9400d3">&bull;</font>Colocada a p&aacute;gina de op&ccedil;&otilde;es <s>finalmente</s>.<br>
+<font color="#9400d3">&bull;</font>Nova fun&ccedil;&atilde;o de busca pelo menu contexto:<br>
+&nbsp;&nbsp;<font color="#00ff00">&bull;</font>Apenas selecionando qualquer coisa em qualquer p&aacute;gina e clicando com o bot&atilde;o direito do mouse, passando o mouse em cima de "DescicloApp" e escolha se voc&ecirc; quer Ir, Editar ou Pesquisar o que voc&ecirc; selecionou na Desciclop&eacute;dia :D<br>
+<font color="#9400d3">&bull;</font>Colocado bot&atilde;o de artigo aleat&oacute;rio.<br>
+<font color="#9400d3">&bull;</font>Mudan&ccedil;as recentes na popup.<br>
+<font color="#9400d3">&bull;</font>Nova forma de dar feedback.<br>
+<font color="#9400d3">&bull;</font>Retirado bot&atilde;o do blog (n&atilde;o era mais atualizado...).<br>
+<font color="#9400d3">&bull;</font>Melhoras na interface.<br>
+<font color="#ff0000">&bull;</font>Corre&ccedil;&atilde;o de bugs.
+<br><br>
 <u><b>Vers&atilde;o 4.7</b></u>
+<!-- Versao 4.7.7 e 4.7.9 tambem tenta corrigir bug no jQuery que faz a Mozilla nao aceitar a extensao -->
+<!-- Versao 4.7.5 corrige bug no botao do Descionario -->
+<!-- Versao 4.7.1 tenta corrigir bug no jQuery que faz a Mozilla nao aceitar a extensao -->
 <br><br>
 Lan&ccedil;ada dia 01 de mar&ccedil;o 2013:<br>
 Pequena atualiza&ccedil;&atilde;o:<br>
@@ -119,8 +140,7 @@ Primeira vers&atilde;o para Firefox:<br>
 <br>
 </div>
 <div id="rodape">
-<div style="float:left">&nbsp;&copy; 2010-2013 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right"><a href="http://desciclopedia.org/wiki/All_your_base_are_belong_to_us" target="_blank"><font color="#000000">All your extension are belong to</font> <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" target="_blank">me</a>.</div>
+<div style="float:left">&nbsp;&copy; 2010-2013 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right"><a id="your" class="script" target="_blank"><font color="#000000">All your extension are belong to</font> <a id="me" class="script">me</a>.</div>
 </div>
-<div style="display:none"><div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
 </body>
 </html>
