--- a/DescicloApp/chrome/DescicloApp/paginas/faq.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/faq.html
@@ -44,6 +44,7 @@ a:visited {
 <ul id="navbar">
 <li id="faq" class="navbar-item navbar-item-selected">FAQ</li>
 <li id="changelog" class="navbar-item">Changelog</li>
+<li id="opcoes" class="navbar-item">Op&ccedil;&otilde;es</li>
 <li id="sobre" class="navbar-item">Sobre</li>
 </ul>
 </div>
@@ -53,7 +54,7 @@ a:visited {
 <div class="page" style="display:block">
 <h1>FAQ</h1>
 <br>
-Ou perguntas frequentes que talvez <a href="http://desciclopedia.org/wiki/Voc%C3%AA" target="_blank" title="Voc&ecirc;">voc&ecirc;</a> queira saber:
+Ou perguntas frequentes que talvez <a id="voce" class="script" title="Voc&ecirc;">voc&ecirc;</a> queira saber:
 <br><br>
 <b>O DescicloApp &eacute; um aplicativo oficial da Desciclop&eacute;dia?</b>
 <br>
@@ -61,21 +62,14 @@ Nopes, ele &eacute; desenvolvido por um desenvolvedor normal, mais n&atilde;o &e
 <br><br>
 <b>Por que as vezes as p&aacute;ginas demoram muito pra carregar ou nem carregam?</b>
 <br>
-Por culpa de <a href="http://desciclopedia.org/wiki/Servidor_da_Desciclop%C3%A9dia" target="_blank" title="Servidor da Desciclop&eacute;dia">um neg&oacute;cio a&iacute;</a> muito r&aacute;pido e est&aacute;vel, normal isso acontecer, n&atilde;o &eacute; culpa do DescicloApp.
+Por culpa de <a id="servidor" class="script" title="Servidor da Desciclop&eacute;dia">um neg&oacute;cio a&iacute;</a> muito r&aacute;pido e est&aacute;vel, normal isso acontecer, n&atilde;o &eacute; culpa do DescicloApp.
 <br><br>
 <b>Por que as vezes quando eu clico em algum "Minha ..." me leva pra uma p&aacute;gina de IP?</b>
 <br>
-Voc&ecirc; tem que estar logado na Desciclop&eacute;dia para te levar pra sua p&aacute;gina, se n&atilde;o estiver ai te leva pra p&aacute;gina do seu IP mesmo...
-<br><br>
-<b>Por que o DescicloApp para Firefox n&atilde;o tem a p&aacute;gina de op&ccedil;&otilde;es?</b>
-<br>
-Porque o jeito de fazer uma p&aacute;gina de op&ccedil;&otilde;es no Firefox &eacute; diferente do Chrome e Opera, por isso quem faz a extens&atilde;o precisa de um tempo pra aprender, talvez na pr&oacute;xima vers&atilde;o tenha.</div>
-<div class="clear"></div>
+Voc&ecirc; tem que estar logado na Desciclop&eacute;dia para te levar pra sua p&aacute;gina, se n&atilde;o estiver ai te leva pra p&aacute;gina do seu IP mesmo...</div>
 </div>
 <div id="rodape">
-<div style="float:left">&nbsp;&copy; 2010-2013 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right"><a href="http://desciclopedia.org/wiki/All_your_base_are_belong_to_us" target="_blank"><font color="#000000">All your extension are belong to</font> <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" target="_blank">me</a>.</div>
-<div style="display:none">
-<div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
+<div style="float:left">&nbsp;&copy; 2010-2013 <a href="http://code.google.com/p/aloogle"><font color="#000000">Aloogle</font></a></div><div align="right"><a id="your" class="script" target="_blank"><font color="#000000">All your extension are belong to</font> <a id="me" class="script">me</a>.</div>
 </div>
 </body>
 </html>
