--- a/DescicloApp/chrome/DescicloApp/paginas/feedback.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/feedback.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-<title>Download - DescicloApp para Opera</title>
+<title>Enviar feedback - DescicloApp para Firefox</title>
 <link rel="shortcut icon" href="../icons/icon.ico" /> 
 <link rel="author" href="https://plus.google.com/101361157875821775334/" />
 <link rel="stylesheet" href="../css/paginas.css" />
-<link rel="stylesheet" href="../css/button.css" />
 <script src="../js/jquery/jquery-1.9.1.min.js"></script>
 <script src="../js/paginas.js"></script>
 <style type="text/css">
@@ -39,18 +38,7 @@ a:visited {
 <div id="mainview-content">
 <div id="page-container">
 <div class="page" style="display:block">
-<h1>DescicloApp para Opera</h1>
-<br>
-1. Abra o Opera<br>
-2. Copie <font color="#0000ff">https://addons.opera.com/extensions/details/descicloapp</font> e cole na barra de endere&ccedil;os<br>
-3. D&ecirc; enter<br>
-4. Baixe normalmente<br>
-5. Pronto :)</div>
-<br><br>
-<div style="align:center;"><a href="../imagens/printdescicloappopera5.jpg" title="Clique para ampliar"><img src="../imagens/printdescicloappopera5.jpg" height="300"></a></div>
-</div>
-<div style="display:none">
-<div id="opera"/><div id="chrome"/><div id="sharefacebook"/><div id="sharetwitter"/><div id="sharegoogleplus"/></div>
+<iframe id="JotFormIFrame" allowtransparency="true" src="http://aloogle.tumblr.com/descicloapp/feedback" frameborder="0" style="width:100%; height:620px; border:none;" scrolling="no"></iframe>
 </div>
 </body>
 </html>
