--- a/DescicloApp/chrome/DescicloApp/paginas/sobre.html
+++ b/DescicloApp/chrome/DescicloApp/paginas/sobre.html
@@ -67,6 +67,7 @@ div.share:active {
 <ul id="navbar">
 <li id="faq" class="navbar-item">FAQ</li>
 <li id="changelog" class="navbar-item">Changelog</li>
+<li id="opcoes" class="navbar-item">Op&ccedil;&otilde;es</li>
 <li id="sobre" class="navbar-item navbar-item-selected">Sobre</li>
 </ul>
 </div>
@@ -77,29 +78,29 @@ div.share:active {
 <h1>Sobre <a id="opera" title="Tamb&eacute;m usa Opera? Fa&ccedil;a download do DescicloApp para Opera!! Clique aqui"><img src="../imagens/opera.png" height="30px" align="right"></a><a id="chrome" title="Tamb&eacute;m usa Chrome? Fa&ccedil;a download do DescicloApp para Google Chrome!! Clique aqui"><img src="../imagens/chrome.png" height="30px" align="right"></a></h1>
 <div>
 <h3>Vers&atilde;o</h3>
-<div>4.7.1</div>
+<div>5.0</div>
 <hr>
 <h3>Desenvolvido por</h3>
 <div>
 Alefe Souza<br>
 <a href="http://twitter.com/alefesouza5" target="_blank" title="Twitter">@alefesouza5</a><br>
-<a href="http://engra.tumblr.com/" target="_blank" title="Tumblr">http://engra.tumblr.com</a><br>
-<a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:%C3%81s" title="P&aacute;gina na Desciclop&eacute;dia">http://desciclopedia.org/wiki/Usu&aacute;rio:&Aacute;s</a>
+<a href="http://aloogle.tumblr.com/" target="_blank" title="Tumblr">http://aloogle.tumblr.com</a><br>
+<a id="usuario" class="script" title="P&aacute;gina na Desciclop&eacute;dia"></a>
 </div>
 <hr>
 <h3>Enviar feedback</h3>
 <div>
-Se voc&ecirc; quiser <a href="http://desciclopedia.org/wiki/Dar" target="_blank" title="Dar"><font style="color: #000000; text-decoration: none;">dar</font></a> alguma sugest&atilde;o ou relatar algum bug na extens&atilde;o <a href="mailto:alefe.mtv@gmail.com" title="S&oacute; n&atilde;o manda spam, porra">me mande um e-mail</a> ou se voc&ecirc; for usu&aacute;rio da Desciclop&eacute;dia fale comigo pela minha p&aacute;gina de <s><a href="http://desciclopedia.org/wiki/Flamewar" target="_blank" title="Flamewar">flamewar</a></s> <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio_Discuss%C3%A3o:%C3%81s">discuss&atilde;o</a>
+Se voc&ecirc; quiser <a id="dar" class="script" title="Dar"><font style="color: #000000; text-decoration: none;">dar</font></a> alguma sugest&atilde;o ou relatar algum bug, ou qualquer outra coisa sobre a extens&atilde;o me envie uma mensagem <a id="mensagem" class="script">clicando aqui</a>.
 </div>
 <hr>
 <h3>Agradecimentos</h3>
 <div>
-Ao <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:UltraJohnn%C3%BF" target="_blank" title="P&aacute;gina do UltraJohnn&yuml; na Desciclop&eacute;dia">UltraJohnn&yuml;</a> e ao <a href="http://desciclopedia.org/wiki/Usu%C3%A1rio:Siphodemos" target="_blank" title="P&aacute;gina do Siphodemos na Desciclop&eacute;dia">Siphodemos</a> por terem feito uma &oacute;tima divulga&ccedil;&atilde;o. 
+Ao <a id="johnny" class="script" title="P&aacute;gina do UltraJohnn&yuml; na Desciclop&eacute;dia">UltraJohnn&yuml;</a> e ao <a id="sipho" class="script" title="P&aacute;gina do Siphodemos na Desciclop&eacute;dia">Siphodemos</a> por terem feito uma &oacute;tima divulga&ccedil;&atilde;o. 
 </div>
 <hr>
 <h3>GitHub</h3>
 <div>
-Caso <a href="http://desciclopedia.org/wiki/Voc%C3%AA" target="_blank" title="Voc&ecirc;">voc&ecirc;</a> seja desenvolvedor (<a href="http://desciclopedia.org/wiki/Ou_n%C3%A3o" target="_blank" title="Ou n&atilde;o">ou n&atilde;o</a>) e queira ter uma ideia de como a extens&atilde;o foi feita, <a href="https://github.com/alefesouza/descicloapp-firefox" target="_blank" title="Reposit&oacute;rio da extens&atilde;o no GitHub">clique aqui</a> para ver o c&oacute;digo-fonte.
+Caso <a id="voce" class="script" title="Voc&ecirc;">voc&ecirc;</a> seja desenvolvedor (<a id="ounao" class="script" title="Ou n&atilde;o">ou n&atilde;o</a>) e queira ter uma ideia de como a extens&atilde;o foi feita, <a href="https://github.com/alefesouza/descicloapp-firefox" target="_blank" title="Reposit&oacute;rio da extens&atilde;o no GitHub">clique aqui</a> para ver o c&oacute;digo-fonte.
 </div>
 <hr>
 <h3>Cr&eacute;ditos</h3>
